--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4"
   }
 }
